# external-sort

./: .gitignore  CMakeLists.txt  Makefile  file.txt  main.cpp
src/: main.cpp
